Fix spacing between navcigation items

--- a/css/index.css
+++ b/css/index.css
@@ -154,14 +154,12 @@ body .container header .title h1 {
 .nav-links ul {
   display: flex;
   flex-direction: row;
+  justify-content: space-evenly;
   background-color: #0D111F;
 }
 .nav-links ul li {
-  justify-content: space-between;
-  padding: 0.75rem 1rem;
-}
-.nav-links ul li:last-child {
-  margin-left: auto;
+  margin: 0 auto;
+  padding: 0.75rem 0;
 }
 .nav-links ul li a {
   color: #E3E3E3;
