--- a/less/navigation.less
+++ b/less/navigation.less
@@ -1,16 +1,17 @@
 .nav-links ul {
     display: flex;
     flex-direction: row;
+    justify-content: space-evenly;
     background-color: @dark-slate-gray;
 
     li {
-        justify-content: space-between;
-        padding: 0.75rem 1rem;
+        margin: 0 auto;
+        padding: 0.75rem 0;
     }
 
-    li:last-child {
-        margin-left: auto;
-    }
+    // li:last-child {
+    //     margin-left: auto;
+    // }
 
     li a{
         color: @silver;
